--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -58,13 +58,12 @@
 }
 
 .btn-link {
-    @apply p-2 bg-gradient-to-bl from-primary-500 to-primary-600 rounded-full flex items-center justify-center hover:from-black-950 hover:to-transparent hover:outline hover:outline-primary-500 hover:shadow-lg hover:shadow-primary-600/40 transition-colors duration-pro;
+    @apply p-2 mr-4 bg-gradient-to-bl from-primary-500 to-primary-700 rounded-lg flex items-center justify-center hover:from-primary-400 hover:to-primary-600 hover:shadow-lg hover:shadow-primary-300/40 hover:scale-105 transition-all active:scale-95;
 }
 
 .btn-link-secundary {
     @apply p-2 font-bold rounded-lg flex items-center justify-center bg-black/70 outline outline-cyan-500 hover:outline-cyan-400 hover:scale-103 transition-all duration-pro;
 }
-
 
 .btn-primary {
     @apply px-8 py-2 rounded-lg bg-gradient-to-br from-primary-400 to-primary-700 hover:shadow-primary transition-colors duration-pro;
