fix: hero buttons

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -12,7 +12,7 @@ import Typewriter from "./ui/Typewriter";
              <Typewriter client:load />
             <p>Desarrollamos soluciones web innovadoras y tecnológicas para impulsar tu negocio.</p>
         </div>
-        <div class="space-x-4">
+        <div class="flex flex-col lg:flex-row gap-4">
             <a href="#quienes-somos" class="btn-secundary">Conocer más</a>
             <a href="#contacto" class="btn-primary">Solicitar Web</a>
         </div>
