--- a/src/components/ui/Header.astro
+++ b/src/components/ui/Header.astro
@@ -1,5 +1,6 @@
 ---
 import { Menu, X, Phone } from "@lucide/astro";
+import { Image } from "astro:assets";
 ---
 
 <header
@@ -7,14 +8,15 @@ import { Menu, X, Phone } from "@lucide/astro";
 >
   <a
     href="#inicio"
-    class="flex items-center hover:scale-110 hover:rotate-3 transition-transform duration-300 active:scale-95"
+    class="flex w-10 items-center hover:scale-110 hover:rotate-3 transition-transform duration-300 active:scale-95"
   >
-    <img
-      src="/logo-cetzz-labs.webp"
+    <Image
+      src="/logo.webp"
       alt="CetZz Labs"
-      width={150}
-      height={50}
-      class="w-20 h-auto"
+      width={100}
+      height={100}
+      loading="eager"      
+      class="w-full object-contain rounded-full"
     />
   </a>
 
